--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,12 @@
 {
-  "name": "push demo",
+  "name": "PushDemo",
   "short_name": "PushDemo",
   "icons": [
     {
-      "src": "icon.svg",
+      "src": "icons/icon.svg",
       "sizes": "any",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
   "start_url": "/",
